Update translations and URLs

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 "tab-share-button" = "JAGA";
 "tab-encrypt-button" = "KRÜPTEERI";
 "tab-decrypt-button" = "DEKRÜPTEERI";
-"tab-confirm-button" = "KINNITA VALIK";
+"tab-confirm-button" = "KINNITA";
 
 "tab-selected" = "Valitud, %@, vahekaart %@ / %@";
 "tab-unselected" = "%@, vahekaart %@ / %@";
@@ -57,9 +57,9 @@
 "signing-recent-containers" = "Hiljutised dokumendid";
 
 // Crypto
-"crypto-view-begin-label" = "Vali fail krüpteerimiseks või dekrüpteerimiseks";
+"crypto-view-begin-label" = "Krüpteerimiseks või dekrüpteerimiseks vali fail";
 "crypto-view-begin-button" = "VALI FAIL";
-"crypto-empty-ldap-label" = "Isikul või asutusel puudub kehtiv sertifikaat. \nKrüpteerimiseks on vaja kehtivat sertikaati.\nKüsimuste korral pöörduge id.ee";
+"crypto-empty-ldap-label" = "Isikul või asutusel puudub kehtiv sertifikaat. \nKrüpteerimiseks on vaja kehtivat sertikaati.\nKüsimuste korral pöördu id.ee";
 "crypto-ldap-search-placeholder" = "Sisesta isikukood, asutus või registrikood";
 "crypto-encryption-error-text" = "Midagi läks krüpteerimisel valesti";
 
@@ -68,16 +68,16 @@
 "crypto-valid-to" = "kehtiv kuni";
 "crypto-type-id-card" = "ID-kaart";
 "crypto-type-digi-id" = "Digi-ID";
-"crypto-type-eseal" = "e-Tempel";
-"crypto-type-mobile-id" = "MOBIIL-ID";
-"crypto-type-unknown" = "TEADMATA";
+"crypto-type-eseal" = "Krüpteerimissertifikaat";
+"crypto-type-mobile-id" = "Mobiil-ID";
+"crypto-type-unknown" = "Teadmata";
 "crypto-add-addressee-button-title" = "LISA";
 "crypto-addressee-added-button-title" = "LISATUD";
-"crypto-remove-addressee-button" = "Eemalda Adressaat";
+"crypto-remove-addressee-button" = "Eemalda adressaat";
 
 // Crashlytics
 "crashlytics-title" = "Kas saata vearaport?";
-"crashlytics-message" = "Hei. Rakenduses juhtus viga. Palun aita meid ja saada meile vearaport, et saaksime selle vea parandada.";
+"crashlytics-message" = "Rakenduses juhtus viga. Palun saada meile vearaport, et saaksime selle vea parandada.";
 "crashlytics-action-send" = "Saada";
 "crashlytics-action-always-send" = "Saada alati";
 "crashlytics-action-do-not-send" = "Ära saada";
@@ -100,7 +100,7 @@
 "file-import-open-existing-failed-alert-message" = "Dokumendi %@ avamine ebaõnnestus";
 "file-import-create-new-failed-alert-title" = "Ümbriku loomine ebaõnnestus";
 "file-import-create-new-failed-alert-message" = "%@ laadmine ebaõnnesus";
-"file-import-remove-file" = "Eemalda Fail";
+"file-import-remove-file" = "Eemalda fail";
 "file-import-save-file" = "Salvesta fail ümbrikust";
 "file-import-file-saved" = "Fail salvestatud";
 "file-import-failed-file-save" = "Faili salvestamine ebaõnnestus";
@@ -111,7 +111,7 @@
 "container-details-file-already-exists" = "Fail on juba ümbrikus olemas";
 "container-header-files-title" = "Ümbriku sisu";
 "container-header-create-files-title" = "Ümbriku sisu";
-"container-edit-name-button" = "Muuda ümbriku nime";
+"container-edit-name-button" = "Ümbriku nimi";
 "container-error-message-failed-container-name-change" = "Ümbriku nime muutmine ebaõnnestus";
 "container-header-files-add-file" = "Lisa fail";
 "container-header-create-addressee-title" = "Adressaadid";
@@ -120,7 +120,7 @@
 "container-row-edit-remove" = "Eemalda";
 "container-header-title" = "ÜMBRIK:";
 "container-error-message-invalid-signature" = "1 ALLKIRI EI OLE KEHTIV";
-"container-error-message-invalid-signatures" = "%d ALLKIRJA EI KEHTI";
+"container-error-message-invalid-signatures" = "%d ALLKIRJA EI OLE KEHTIVAD";
 "container-error-message-unknown-signature" = "1 ALLKIRI ON TEADMATA";
 "container-error-message-unknown-signatures" = "%d ALLKIRJA ON TEADMATA";
 "container-signature-signed" = "Allkirjastatud %@";
@@ -152,20 +152,20 @@
 
 "signature-remove-confirm-message" = "Soovid eemaldada allkirja?";
 "datafile-remove-confirm-message" = "Soovid eemaldada faili ümbrikust?";
-"last-datafile-remove-confirm-message" = "Oled kustutamas viimast faili ümbrikus, koos sellega eemaldatakse ka ümbrik";
+"last-datafile-remove-confirm-message" = "Oled kustutamas viimast faili ümbrikus, koos sellega eemaldatakse ka ümbrik.";
 
 "signing-remember-me" = "Pea mind meeles";
-"mobile-id-title" = "Sisesta oma telefoninumber ja isikukood Mobiil-IDga allkirjastamiseks";
-"mobile-id-phone-title" = "Riigi suunakood ja mobiiltelefoni number";
+"mobile-id-title" = "Sisesta oma telefoninumber ja isikukood mobiil-IDga allkirjastamiseks";
+"mobile-id-phone-title" = "Riigikood ja telefoninumber";
 "mobile-id-idcode-title" = "Isikukood";
-"mobile-id-challenge-title" = "Allkirjasta Mobiil-ID äpiga";
+"mobile-id-challenge-title" = "Allkirjasta mobiil-IDga";
 "mobile-id-challenge-waiting-response" = "Ootan vastust ...";
 "smart-id-title" = "Sisesta oma isikukood Smart-IDga allkirjastamiseks";
 "smart-id-country-title" = "Riik";
 "smart-id-country-estonia" = "Eesti";
 "smart-id-country-lithuania" = "Leedu";
 "smart-id-country-latvia" = "Läti";
-"smart-id-challenge-title" = "Allkirjasta Smart-ID äpiga";
+"smart-id-challenge-title" = "Allkirjasta Smart-IDga";
 "smart-id-sign-help-title" = "Veendu kontrollkoodi õigsuses ja sisesta nutiseadmes Smart-ID PIN2-kood";
 "container-sign-title" = "Allkirjastamine";
 "container-encryption-title" = "Krüpteerimine";
@@ -174,7 +174,7 @@
 "container-validate-title" = "Ümbriku valideerimine";
 "container-validating" = "Laen...";
 "importing-files-progress-message" = "Laen faile...";
-"mobile-id-sign-help-title" = "Veendu kontrollkoodi õiguses ja sisesta telefonil Mobiil-ID PIN2 kood.";
+"mobile-id-sign-help-title" = "Veendu kontrollkoodi õiguses ja sisesta telefonil mobiil-ID PIN2-kood.";
 "done-button-title" = "Valmis";
 "recent-containers-empty-list-title" = "Dokumendid puuduvad";
 "recent-containers-empty-search-message" = "Dokumenti ei leitud";
@@ -184,29 +184,29 @@
 "sign-title-id-card" = "ID-kaart";
 "card-reader-state-reader-not-found" = "Ühtegi kaardilugejat pole ühendatud";
 "card-reader-state-id-card-not-found" = "Kaardilugeja leitud.\nSisesta ID-kaart lugejasse.";
-"card-reader-state-id-card-connected" = "ID-kaart leitud.\nPärin andmeid.";
+"card-reader-state-id-card-connected" = "ID-kaart leitud.\nPärin andmeid...";
 "card-reader-state-ready-for-pin2" = "ID-kaart on valmis allkirjastamiseks.\n%@ (%@)";
 "card-reader-state-ready-for-pin1" = "ID-kaart on valmis dekrüpteerimiseks.\n%@ (%@)";
 "signing-in-progress" = "Toimub allkirjastamine.\nPalun oota.";
 "decryption-in-progress" = "Toimub dekrüpteerimine.\nPalun oota.";
-"wrong-pin2" = "Vale PIN2. Saad PIN2 koodi sisestada veel %d korda.";
-"wrong-pin1" = "Vale PIN1. Saad PIN1 koodi sisestada veel %1$d korda.";
+"wrong-pin2" = "Vale PIN2. Saad PIN2-koodi sisestada veel %d korda.";
+"wrong-pin1" = "Vale PIN1. Saad PIN1-koodi sisestada veel %1$d korda.";
 "wrong-pin2-single" = "Vale PIN2. Järgmise vale sisestusega lukustub PIN.";
 "wrong-pin1-single" = "Vale PIN1. Järgmise vale sisestusega lukustub PIN.";
-"card-reader-state-initial" = "Ühenda kaardilugeja telefoniga ja sisesta ID-kaart lugejasse.";
+"card-reader-state-initial" = "Ühenda kaardilugeja nutiseadmega ja sisesta ID-kaart lugejasse.";
 "pin2-textfield-label" = "Sisesta PIN2";
 "pin1-textfield-label" = "Sisesta PIN1";
 "pin2-blocked-alert" = "PIN2 on lukus. Mine Minu eID, et avada.";
 "pin1-blocked-alert" = "PIN1 on lukus. Mine Minu eID, et avada.";
-"generic-error-message" = "Midagi läks valesti. Palun proovi uuesti";
-"decryption-error-message" = "Midagi läks dekrüpteerimisel valesti. Palun proovi uuesti";
+"generic-error-message" = "Midagi läks valesti. Palun proovi uuesti.";
+"decryption-error-message" = "Midagi läks dekrüpteerimisel valesti. Palun proovi uuesti.";
 "signing-error-too-many-requests" = "Sinu IP-aadressi tasuta allkirjade kuulimiit on ületatud. https://www.id.ee/artikkel/asutustele-kus-allkirjastatakse-digidoc4-kliendi-kaudu-suuremates-kogustes-dokumente/";
-"no-response-error" = "Palun kontrollige internetiühendust";
-"ocsp-invalid-time-slot" = "Palun kontrollige oma nutiseadme kellaaega. https://www.id.ee/artikkel/ria-digidoc-viga-palun-kontrollige-oma-nutiseadme-kellaaega/";
+"no-response-error" = "Palun kontrolli internetiühendust";
+"ocsp-invalid-time-slot" = "Palun kontrolli oma nutiseadme kellaaega. https://www.id.ee/artikkel/ria-digidoc-viga-palun-kontrollige-oma-nutiseadme-kellaaega/";
 "signing-aborted-message" = "Allkirjastamine katkestatud";
-"my-eid-status-reader-not-found" = "Ühenda kaardilugeja telefoniga ja sisesta ID-kaart lugejasse.";
+"my-eid-status-reader-not-found" = "Ühenda kaardilugeja nutiseadmega ja sisesta ID-kaart lugejasse.";
 "my-eid-status-card-not-found" = "Kaardilugeja leitud.\nSisesta ID-kaart lugejasse.";
-"my-eid-status-requesting-data" = "ID-kaart leitud.\nPärin andmeid.";
+"my-eid-status-requesting-data" = "ID-kaart leitud.\nPärin andmeid...";
 "my-eid-cert-expired" = "aegunud";
 "my-eid-cert-valid" = "kehtib";
 "my-eid-info-item-given-names" = "EESNIMI";
@@ -229,59 +229,59 @@
 "my-eid-cert-info-status-expired" = "aegunud";
 "my-eid-info-pin1-title" = "Isikutuvastamise sertifikaat";
 "my-eid-info-pin2-title" = "Allkirjastamise sertifikaat";
-"my-eid-info-puk-title" = "PUK kood";
-"my-eid-info-pin1-link-text" = "Unustasid PIN1 koodi?";
-"my-eid-info-pin2-link-text" = "Unustasid PIN2 koodi?";
+"my-eid-info-puk-title" = "PUK-kood";
+"my-eid-info-pin1-link-text" = "Unustasid PIN1-koodi?";
+"my-eid-info-pin2-link-text" = "Unustasid PIN2-koodi?";
 "my-eid-info-puk-link-text" = "Unustasid PUK koodi?";
 "my-eid-info-pin1-button-title" = "MUUDA PIN1";
 "my-eid-info-pin2-button-title" = "MUUDA PIN2";
 "my-eid-info-puk-button-title" = "MUUDA PUK";
-"my-eid-info-puk-cert-info-text" = "PUK koodi leiad enda koodiümbrikust";
-"my-eid-info-pin-puk-segment-title" = "PIN/PUK KOODID JA SERTIFIKAATIDE KONTROLL";
-"my-eid-info-pin1-blocked-message" = "PIN1 on blokeeritud, kuna PIN1 koodi on sisestatud 3 korda valesti.";
-"my-eid-info-pin2-blocked-message" = "PIN2 on blokeeritud, kuna PIN2 koodi on sisestatud 3 korda valesti.";
-"my-eid-info-puk-blocked-message" = "PUK on blokeeritud, kuna PUK koodi on sisestatud 3 korda valesti.Juhised uue dokumendi taotlemiseks leiad siit.";
+"my-eid-info-puk-cert-info-text" = "PUK-koodi leiad enda koodiümbrikust";
+"my-eid-info-pin-puk-segment-title" = "PIN-/PUK-KOODID JA SERTIFIKAATIDE KONTROLL";
+"my-eid-info-pin1-blocked-message" = "PIN1 on blokeeritud, kuna PIN1-koodi on sisestatud 3 korda valesti. Tühista blokeering, et PIN1 taas kasutada.";
+"my-eid-info-pin2-blocked-message" = "PIN2 on blokeeritud, kuna PIN2-koodi on sisestatud 3 korda valesti. Tühista blokeering, et PIN2 taas kasutada.";
+"my-eid-info-puk-blocked-message" = "PUK on blokeeritud, kuna PUK-koodi on sisestatud 3 korda valesti. PUK-koodi ei saa ise lahti blokeerida.";
 "my-eid-unblock-pin1-button-title" = "TÜHISTA BLOKEERING";
 "my-eid-unblock-pin2-button-title" = "TÜHISTA BLOKEERING";
-"my-eid-how-to-get-codes-message" = "Juhised uue dokumendi taotlemiseks leiad siit.";
+"my-eid-how-to-get-codes-message" = "Uue PUK-koodi saamiseks külasta klienditeeninduspunkti, kust saad uue koodiümbriku uute koodidega.";
 "my-eid-code-changed-success-message" = "%@ MUUDETUD";
 "my-eid-code-unblocked-success-message" = "%@ BLOKEERING TÜHISTATUD";
-"my-eid-wrong-code-message" = "Vale %@ kood. Saad veel proovida 2 korda.";
-"my-eid-wrong-code-message-singular" = "Vale %@ kood. Saad veel proovida 1 kord.";
-"my-eid-code-blocked-message" = "%1$@ on blokeeritud, kuna %1$@ koodi on sisestatud 3 korda valesti. Tühista blokeering, et %1$@ taas kasutada.";
+"my-eid-wrong-code-message" = "Vale %@-kood. Saad veel proovida 2 korda.";
+"my-eid-wrong-code-message-singular" = "Vale %@-kood. Saad veel proovida 1 kord.";
+"my-eid-code-blocked-message" = "%1$@ on blokeeritud, kuna %1$@-koodi on sisestatud 3 korda valesti. Tühista blokeering, et %1$@ taas kasutada.";
 // *** My eID info bullets ***
 "my-eid-info-bullet-same-codes-warning" = "Uus %@ peab olema erinev eelmisest.";
-"my-eid-info-bullet-auth-cert-info" = "PIN1 koodi kasutatakse isikutuvastamiseks";
-"my-eid-info-bullet-pin1-blocked-warning" = "Kui sisestad PIN1 koodi kolm korda valesti, siis isikutuvastamise sertifikaat blokeeritakse ning ID-kaarti pole võimalik isikutuvastamiseks kasutada enne blokeeringu tühistamist PUK koodi abil.";
-"my-eid-info-bullet-forgot-code-note" = "Kui olete unustanud %1$@ koodi, kuid teate PUK koodi, siis siin saate määrata uue %1$@ koodi.";
-"my-eid-info-bullet-puk-envelope-info" = "PUK koodi leiad ID-kaardi koodiümbrikus, kui sa pole seda vahepeal muutnud.";
-"my-eid-info-bullet-sign-cert-info" = "PIN2 koodi kasutatakse digitaalallkirja andmiseks.";
-"my-eid-info-bullet-pin2-blocked-warning" = "Kui sisestad PIN2 koodi kolm korda valesti, siis allkirjastamise sertifikaat blokeeritakse ning ID-kaarti pole võimalik allkirjastamiseks kasutada enne blokeeringu tühistamist PUK koodi abil.";
-"my-eid-info-bullet-puk-unblock-info" = "PUK koodi abil saab tühistada sertifikaadi blokeeringu, kui PIN1 või PIN2 koodi on 3 korda järjest valesti sisestatud.";
-"my-eid-info-bullet-puk-blocked-warning" = "Kui peale vahetamist PUK kood ununeb ja sertifikaat jääb blokeerituks kolme vale PIN1 või PIN2 sisestamise järel, siis ainus võimalus ID-kaart jälle tööle saada on pöörduda klienditeeninduspunkti poole.";
-"my-eid-change-code-title" = "%@ muutmine";
-"my-eid-unblock-code-title" = "%@ blokeeringu tühistamine";
-"my-eid-current-code-label" = "KEHTIV %@ KOOD";
-"my-eid-new-code-label" = "UUS %@ KOOD (vähemalt %i sümbolit)";
-"my-eid-new-code-again-label" = "UUS %@ KOOD UUESTI";
+"my-eid-info-bullet-auth-cert-info" = "PIN1-koodi kasutatakse isikutuvastamiseks";
+"my-eid-info-bullet-pin1-blocked-warning" = "Kui sisestad PIN1-koodi kolm korda valesti, siis isikutuvastamise sertifikaat blokeeritakse ning ID-kaarti pole võimalik isikutuvastamiseks kasutada enne blokeeringu tühistamist PUK-koodi abil.";
+"my-eid-info-bullet-forgot-code-note" = "Kui oled unustanud %1$@-koodi, kuid tead PUK-koodi, siis siin saad määrata uue %1$@-koodi.";
+"my-eid-info-bullet-puk-envelope-info" = "PUK-koodi leiad ID-kaardi koodiümbrikust, kui sa pole seda vahepeal muutnud.";
+"my-eid-info-bullet-sign-cert-info" = "PIN2-koodi kasutatakse digitaalallkirja andmiseks.";
+"my-eid-info-bullet-pin2-blocked-warning" = "Kui sisestad PIN2-koodi kolm korda valesti, siis allkirjastamise sertifikaat blokeeritakse ning ID-kaarti pole võimalik allkirjastamiseks kasutada enne blokeeringu tühistamist PUK-koodi abil.";
+"my-eid-info-bullet-puk-unblock-info" = "PUK-koodi abil saab tühistada sertifikaadi blokeeringu, kui PIN1- või PIN2-koodi on 3 korda järjest valesti sisestatud.";
+"my-eid-info-bullet-puk-blocked-warning" = "Kui peale vahetamist PUK-kood ununeb ja sertifikaat jääb blokeerituks kolme vale PIN1 või PIN2 sisestamise järel, siis ainus võimalus ID-kaart jälle tööle saada on pöörduda klienditeeninduspunkti poole.";
+"my-eid-change-code-title" = "%@-koodi vahetus";
+"my-eid-unblock-code-title" = "%@ lahti blokeerimine";
+"my-eid-current-code-label" = "KEHTIV %@-KOOD";
+"my-eid-new-code-label" = "UUS %@-KOOD (vähemalt %i sümbolit)";
+"my-eid-new-code-again-label" = "UUS %@-KOOD UUESTI";
 "my-eid-discard-button-title" = "KATKESTA";
 "my-eid-confirm-change-button-title" = "MUUDA";
-"my-eid-confirm-unblock-button-title" = "TÜHISTA BLOKEERING";
-"my-eid-error-new-code-too-short" = "Uus %@ kood peab olema vähemalt %i-kohaline";
-"my-eid-error-current-code-too-short" = "Kehtiv %@ kood peab olema vähemalt %i-kohaline";
-"my-eid-error-codes-mismatch" = "Uued %@ koodid peavad olema samad";
+"my-eid-confirm-unblock-button-title" = "BLOKEERI LAHTI";
+"my-eid-error-new-code-too-short" = "Uus %@-kood peab olema vähemalt %i-kohaline";
+"my-eid-error-current-code-too-short" = "Kehtiv %@-kood peab olema vähemalt %i-kohaline";
+"my-eid-error-codes-mismatch" = "Uued %@-koodid peavad olema samad";
 "my-eid-error-codes-are-same" = "Kehtiv ja uus %@ peavad olema erinevad";
-"my-eid-error-code-contained-in-personal-code" = "Uus %@ kood ei saa olla osa sinu isikukoodist";
-"my-eid-error-code-is-date-of-birth" = "Uus %@ kood ei saa olla sinu sünnikuupäev";
-"my-eid-error-code-too-easy" = "Uus %@ kood ei saa olla nii lihtne";
+"my-eid-error-code-contained-in-personal-code" = "Uus %@-kood ei saa olla osa sinu isikukoodist";
+"my-eid-error-code-is-date-of-birth" = "Uus %@-kood ei saa olla sinu sünnikuupäev";
+"my-eid-error-code-too-easy" = "Uus %@-kood ei saa olla nii lihtne";
 "settings-title" = "Seaded";
-"settings-phone-number-title" = "Riigi kood ja telefoninumber";
+"settings-phone-number-title" = "Riigikood ja telefoninumber";
 "settings-phone-number-placeholder" = "372XXXXXXXX";
 "settings-id-code-title" = "Isikukood";
 "settings-id-code-placeholder" = "Isikukood";
-"settings-rpuuid-title" = "Ligipääs Mobiil-ID ja Smart-ID teenusele";
+"settings-rpuuid-title" = "Ligipääs mobiil-ID ja Smart-ID teenusele";
 "settings-rpuuid-placeholder" = "00000000-0000-0000-0000-000000000000";
-"settings-timestamp-url-title" = "Ajatempli teenuse URL";
+"settings-timestamp-url-title" = "Ligipääs ajatempliteenusele";
 "settings-timestamp-url-placeholder" = "";
 "settings-timestamp-use-default-title" = "Kasuta vaikeväärtust";
 "diagnostics-title" = "Diagnostika";
