--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 "tab-share-button" = "SHARE";
 "tab-encrypt-button" = "ENCRYPT";
 "tab-decrypt-button" = "DECRYPT";
-"tab-confirm-button" = "CONFIRM SELECTION";
+"tab-confirm-button" = "CONFIRM";
 
 "tab-selected" = "Selected, %@, tab %@ of %@";
 "tab-unselected" = "%@, tab %@ of %@";
@@ -60,23 +60,23 @@
 "crypto-ldap-search-placeholder" = "Enter personal code, company or registry code";
 "crypto-encryption-error-text" = "Something went wrong with encryption";
 "crypto-encryption-success" = "ENCRYPTION SUCCEEDED";
-"crypto-no-addressees-warning" = "No addressees specified";
+"crypto-no-addressees-warning" = "No recipients specified";
 "crypto-valid-to" = "valid to";
 "crypto-type-id-card" = "ID-card";
 "crypto-type-digi-id" = "Digi-ID";
-"crypto-type-eseal" = "e-Seal";
-"crypto-type-mobile-id" = "MOBILE-ID";
-"crypto-type-unknown" = "UNKNOWN";
+"crypto-type-eseal" = "Certificate for Encryption";
+"crypto-type-mobile-id" = "Mobile-ID";
+"crypto-type-unknown" = "Unknown";
 "crypto-add-addressee-button-title" = "ADD";
 "crypto-addressee-added-button-title" = "ADDED";
-"crypto-remove-addressee-button" = "Remove Signature";
+"crypto-remove-addressee-button" = "Remove recipient";
 
 // Signing view
 "signing-recent-containers" = "Recent documents";
 
 // Crashlytics
 "crashlytics-title" = "Send crash report?";
-"crashlytics-message" = "Hey. Looks like we crashed! Please help us fix the problem by sending a crash report.";
+"crashlytics-message" = "Application crashed. Please send us crash report, so we can fix the problem.";
 "crashlytics-action-send" = "Send";
 "crashlytics-action-always-send" = "Always send";
 "crashlytics-action-do-not-send" = "Don’t send";
@@ -99,7 +99,7 @@
 "file-import-open-existing-failed-alert-message" = "Failed to open container %@";
 "file-import-create-new-failed-alert-title" = "Error creating container";
 "file-import-create-new-failed-alert-message" = "Failed to open container %@";
-"file-import-remove-file" = "Remove File";
+"file-import-remove-file" = "Remove file";
 "file-import-save-file" = "Save file";
 "file-import-file-saved" = "File saved";
 "file-import-failed-file-save" = "Failed to save file";
@@ -110,7 +110,7 @@
 "container-details-file-already-exists" = "File already exists in the container";
 "container-header-files-title" = "Container files";
 "container-header-create-files-title" = "Container files";
-"container-edit-name-button" = "Edit container name";
+"container-edit-name-button" = "Container name";
 "container-error-message-failed-container-name-change" = "Failed to rename container";
 "container-header-files-add-file" = "Add file";
 "container-header-create-addressee-title" = "Recipients";
@@ -151,21 +151,21 @@
 
 "signature-remove-confirm-message" = "Remove signature from container?";
 "datafile-remove-confirm-message" = "Remove file from container?";
-"last-datafile-remove-confirm-message" = "You are about to remove the last file in the container, it is removed along with the container";
+"last-datafile-remove-confirm-message" = "You are about to remove the last file in the container, it is removed along with the container.";
 
 "signing-remember-me" = "Remember me";
-"mobile-id-title" = "Enter your mobile number and personal code to sign with Mobile-ID";
+"mobile-id-title" = "Enter your mobile number and personal code to sign with mobile-ID";
 "mobile-id-phone-title" = "Country code and phone number";
 "mobile-id-idcode-title" = "Personal code";
-"mobile-id-challenge-title" = "Sign with Mobile-ID app";
+"mobile-id-challenge-title" = "Sign with mobile-ID";
 "mobile-id-challenge-waiting-response" = "Waiting for response ...";
 "smart-id-title" = "Enter your personal code to sign with Smart-ID";
 "smart-id-country-title" = "Country";
 "smart-id-country-estonia" = "Estonia";
 "smart-id-country-lithuania" = "Lithuania";
 "smart-id-country-latvia" = "Latvia";
-"smart-id-challenge-title" = "Sign with Smart-ID app";
-"smart-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Smart-ID PIN2-code";
+"smart-id-challenge-title" = "Sign with Smart-ID";
+"smart-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Smart-ID PIN2 code";
 "container-sign-title" = "Sign";
 "container-encryption-title" = "Encryption";
 "container-decryption-title" = "Decryption";
@@ -173,7 +173,7 @@
 "container-validate-title" = "Container verification";
 "container-validating" = "Loading...";
 "importing-files-progress-message" = "Importing files...";
-"mobile-id-sign-help-title" = "Make sure the control code matches the one on phone screen and enter Mobile-ID PIN2-code";
+"mobile-id-sign-help-title" = "Make sure the control code matches the one on phone screen and enter mobile-ID PIN2 code";
 "done-button-title" = "Done";
 "recent-containers-empty-list-title" = "No recent documents";
 "recent-containers-empty-search-message" = "Document not found";
@@ -184,7 +184,7 @@
 "card-reader-state-initial" = "Connect the card reader and insert your ID-card into the reader.";
 "card-reader-state-reader-not-found" = "No card readers found";
 "card-reader-state-id-card-not-found" = "Reader found.\nInsert your ID-card into the reader.";
-"card-reader-state-id-card-connected" = "ID-card found.\nRequesting information.";
+"card-reader-state-id-card-connected" = "ID-card found.\nRequesting information...";
 "card-reader-state-ready-for-pin2" = "Ready to sign with ID-card. \n%@ (%@)";
 "card-reader-state-ready-for-pin1" = "Ready to decrypt with ID-card.\n%@ (%@)";
 "signing-in-progress" = "Signing in progress.\nPlease wait.";
@@ -200,12 +200,12 @@
 "pin1-textfield-label" = "Enter PIN1";
 "pin2-blocked-alert" = "PIN2 blocked. Go to My eID to unblock it.";
 "pin1-blocked-alert" = "PIN1 blocked. Go to My eID to unblock it.";
-"generic-error-message" = "Something went wrong. Please try again";
-"decryption-error-message" = "Something went wrong with decryption. Please try again";
+"generic-error-message" = "Something went wrong. Please try again.";
+"decryption-error-message" = "Something went wrong with decryption. Please try again.";
 "signing-aborted-message" = "Signing process aborted";
-"my-eid-status-reader-not-found" = "Connect your card reader to your phone and insert ID-card into the reader.";
+"my-eid-status-reader-not-found" = "Connect your card reader to your smart device and insert ID-card into the reader.";
 "my-eid-status-card-not-found" = "Reader found.\nInsert your ID-card into the reader.";
-"my-eid-status-requesting-data" = "ID-card found.\nRequesting information.";
+"my-eid-status-requesting-data" = "ID-card found.\nRequesting information...";
 "my-eid-cert-expired" = "expired";
 "my-eid-cert-valid" = "valid";
 "my-eid-info-item-given-names" = "GIVEN NAMES";
@@ -237,12 +237,12 @@
 "my-eid-info-puk-button-title" = "CHANGE PUK";
 "my-eid-info-puk-cert-info-text" = "PUK code is in your code envelope";
 "my-eid-info-pin-puk-segment-title" = "PIN/PUK CODES AND CERTIFICATES";
-"my-eid-info-pin1-blocked-message" = "PIN1 is blocked, because PIN1 has been inserted 3 times incorrectly.";
-"my-eid-info-pin2-blocked-message" = "PIN2 is blocked, because PIN2 has been inserted 3 times incorrectly.";
-"my-eid-info-puk-blocked-message" = "PUK is blocked, because PUK code has been inserted 3 times incorrectly. You can find instructions on how to get a new document from here.";
+"my-eid-info-pin1-blocked-message" = "PIN1 has been blocked, because PIN1 code has been entered incorrectly 3 times. Unblock to reuse PIN1.";
+"my-eid-info-pin2-blocked-message" = "PIN2 has been blocked, because PIN2 code has been entered incorrectly 3 times. Unblock to reuse PIN2.";
+"my-eid-info-puk-blocked-message" = "PUK has been blocked, because PUK code has been entered incorrectly 3 times. You can not unblock the PUK code yourself.";
 "my-eid-unblock-pin1-button-title" = "UNBLOCK";
 "my-eid-unblock-pin2-button-title" = "UNBLOCK";
-"my-eid-how-to-get-codes-message" = "You can find instructions on how to get a new document from here.";
+"my-eid-how-to-get-codes-message" = "Please visit the service center to obtain new codes.";
 "my-eid-code-changed-success-message" = "%@ CHANGED";
 "my-eid-code-unblocked-success-message" = "%@ UNBLOCKED";
 "my-eid-wrong-code-message" = "Wrong %@ code. You can try 2 more times.";
@@ -278,9 +278,9 @@
 "settings-phone-number-placeholder" = "372XXXXXXXX";
 "settings-id-code-title" = "Personal code";
 "settings-id-code-placeholder" = "Personal code";
-"settings-rpuuid-title" = "Access to Mobile-ID and Smart-ID service";
+"settings-rpuuid-title" = "Access to mobile-ID and Smart-ID service";
 "settings-rpuuid-placeholder" = "00000000-0000-0000-0000-000000000000";
-"settings-timestamp-url-title" = "Time Stamp service URL";
+"settings-timestamp-url-title" = "Access to Time-Stamping service";
 "settings-timestamp-url-placeholder" = "";
 "settings-timestamp-use-default-title" = "Use default";
 "diagnostics-title" = "Diagnostics";
