--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 "tab-share-button" = "ПОДЕЛИТЬСЯ";
 "tab-encrypt-button" = "ЗАШИФРОВАТЬ";
 "tab-decrypt-button" = "ДЕШИФРОВАТЬ";
-"tab-confirm-button" = "ПОДВЕРДИТЬ ВЫБОР";
+"tab-confirm-button" = "ПОДТВЕРДИТЬ";
 
 "tab-selected" = "Выбрано, %@, вкладка %@ из %@";
 "tab-unselected" = "%@, вкладка %@ из %@";
@@ -48,7 +48,7 @@
 "language-russian" = "Русский язык";
 
 // Signature view
-"signature-view-begin-label" = "Выберите файл для подписи или проверки";
+"signature-view-begin-label" = "Выберите файл для подписания или проверки";
 "signature-view-begin-button" = "ВЫБРАТЬ ФАЙЛ";
 "signature-details-title" = "Детали подписи";
 "menu-button" = "Меню";
@@ -64,9 +64,9 @@
 "crypto-valid-to" = "действителен до";
 "crypto-type-id-card" = "ID-карта";
 "crypto-type-digi-id" = "Digi-ID";
-"crypto-type-eseal" = "e-Печать";
-"crypto-type-mobile-id" = "MOBIIL-ID";
-"crypto-type-unknown" = "НЕИЗВЕСТНО";
+"crypto-type-eseal" = "Сертификат шифрования";
+"crypto-type-mobile-id" = "Mobiil-ID";
+"crypto-type-unknown" = "Неизвестно";
 "crypto-add-addressee-button-title" = "ДОБАВИТЬ";
 "crypto-addressee-added-button-title" = "ДОБАВЛЕН";
 
@@ -109,7 +109,7 @@
 "container-details-file-already-exists" = "Файл уже существует в контейнере";
 "container-header-files-title" = "Файлы контейнера";
 "container-header-create-files-title" = "Файлы контейнера";
-"container-edit-name-button" = "Изменить название контейнера";
+"container-edit-name-button" = "Название контейнера";
 "container-error-message-failed-container-name-change" = "Не удалось изменить название контейнера";
 "container-header-files-add-file" = "Добавить файл";
 "container-header-create-addressee-title" = "Получатели";
@@ -129,7 +129,7 @@
 "container-signature-status-non-qscd" = "(Ограничения)";
 "container-signature-status-invalid" = "Подпись недействительна";
 "container-signature-status-unknown" = "Подпись неизвестная";
-"crypto-remove-addressee-button" = "Удалить Подпись";
+"crypto-remove-addressee-button" = "Удалить подпись";
 "container-signature-test-signature-title" = "Тестовая подпись";
 "container-timestamp-invalid" = "Временной штамп недействителен";
 
@@ -152,10 +152,10 @@
 
 "signature-remove-confirm-message" = "Удалить подпись из контейнера?";
 "datafile-remove-confirm-message" = "Удалить файл из контейнера?";
-"last-datafile-remove-confirm-message" = "Вы собираетесь удалить последний файл в контейнере, он удаляется вместе с контейнером";
+"last-datafile-remove-confirm-message" = "Вы собираетесь удалить последний файл в контейнере, он удаляется вместе с контейнером.";
 
 "signing-remember-me" = "Запомни меня";
-"mobile-id-title" = "Введите свой телефонный номер и личный код для подписания с помощью Mobiil-ID";
+"mobile-id-title" = "Введите свой телефонный номер и личный код для подписания с помощью mobiil-ID";
 "mobile-id-phone-title" = "Код страны и телефонный номер";
 "mobile-id-idcode-title" = "Личный код";
 "mobile-id-challenge-title" = "Подписать с помощью приложения Mobile-ID";
@@ -174,7 +174,7 @@
 "container-validate-title" = "Проверка контейнера";
 "container-validating" = "Загрузка...";
 "importing-files-progress-message" = "Импорт файлов...";
-"mobile-id-sign-help-title" = "Убедитесь в правильности контрольного кодa и введите PIN2-код для Mobiil-ID";
+"mobile-id-sign-help-title" = "Убедитесь в правильности контрольного кодa и введите PIN2-код для mobiil-ID";
 "done-button-title" = "Готово";
 "recent-containers-empty-list-title" = "Недавние документы отсутствуют";
 "recent-containers-empty-search-message" = "Документ не найден";
@@ -182,10 +182,10 @@
 "sign-title-mobile-id" = "Mobiil-ID";
 "sign-title-smart-id" = "Smart-ID";
 "sign-title-id-card" = "ID-карта";
-"card-reader-state-initial" = "Подключите считыватель карты к телефону и вставьте в него Вашу ID-карту.";
+"card-reader-state-initial" = "Подключите считыватель карты и вставьте в него Вашу ID-карту.";
 "card-reader-state-reader-not-found" = "Считыватель карты не обнаружен";
 "card-reader-state-id-card-not-found" = "Обнаружен считыватель карты.\nВставьте в него Вашу ID-карту.";
-"card-reader-state-id-card-connected" = "Обнаружена ID-карта.\nЗапрашивается информация.";
+"card-reader-state-id-card-connected" = "Обнаружена ID-карта.\nЗапрашивается информация...";
 "card-reader-state-ready-for-pin2" = "Готово к подписанию с использованием ID-карты.\n%@ (%@)";
 "card-reader-state-ready-for-pin1" = "Готово к дешифрованию с помощью ID-карты.\n%@ (%@)";
 "signing-in-progress" = "Происходит подписание.\nПожалуйста, подождите.";
@@ -204,9 +204,9 @@
 "generic-error-message" = "Что-то пошло не так. Пожалуйста, попробуйте снова.";
 "decryption-error-message" = "Что-то пошло не так с дешифрованием. Пожалуйста, попробуйте снова.";
 "signing-aborted-message" = "Процесс подписания прерван";
-"my-eid-status-reader-not-found" = "Подключите считыватель карты к телефону и вставьте в него Вашу ID-карту.";
+"my-eid-status-reader-not-found" = "Подключите считыватель карты и вставьте в него Вашу ID-карту.";
 "my-eid-status-card-not-found" = "Обнаружен считыватель карты.\nВставьте в него Вашу ID-карту.";
-"my-eid-status-requesting-data" = "Обнаружена ID-карта.\nЗапрашивается информация.";
+"my-eid-status-requesting-data" = "Обнаружена ID-карта.\nЗапрашивается информация...";
 "my-eid-cert-expired" = "недействителен";
 "my-eid-cert-valid" = "действителен";
 "my-eid-info-item-given-names" = "ИМЯ";
@@ -229,59 +229,59 @@
 "my-eid-cert-info-status-expired" = "истек";
 "my-eid-info-pin1-title" = "Идентификационный сертификат";
 "my-eid-info-pin2-title" = "Сертификат цифровой подписи";
-"my-eid-info-puk-title" = "PUK код";
+"my-eid-info-puk-title" = "PUK-код";
 "my-eid-info-pin1-link-text" = "Забыли PIN1?";
 "my-eid-info-pin2-link-text" = "Забыли PIN2?";
 "my-eid-info-puk-link-text" = "Забыли PUK-код?";
 "my-eid-info-pin1-button-title" = "ПОМЕНЯТЬ PIN1";
 "my-eid-info-pin2-button-title" = "ПОМЕНЯТЬ PIN2";
 "my-eid-info-puk-button-title" = "ПОМЕНЯТЬ PUK";
-"my-eid-info-puk-cert-info-text" = "PUK код в Вашем конверте кодов";
-"my-eid-info-pin-puk-segment-title" = "PIN/PUK КОДЫ И СЕРТИФИКАТЫ";
-"my-eid-info-pin1-blocked-message" = "PIN1 заблокирован, потому что был неверно введен 3 раза.";
-"my-eid-info-pin2-blocked-message" = "PIN2 заблокирован, потому что был неверно введен 3 раза.";
-"my-eid-info-puk-blocked-message" = "PUK заблокирован, потому что был неверно введен 3 раза. Здесь Вы можете найти инструкции о том, как получить новый документ.";
+"my-eid-info-puk-cert-info-text" = "PUK-код в Вашем конверте кодов";
+"my-eid-info-pin-puk-segment-title" = "PIN/PUK И СЕРТИФИКАТЫ";
+"my-eid-info-pin1-blocked-message" = "PIN1 заблокирован, потому что PIN1-код был введён неверно 3 раза. Разблокируйте, чтобы использовать PIN1.";
+"my-eid-info-pin2-blocked-message" = "PIN2 заблокирован, потому что PIN2-код был введён неверно 3 раза. Разблокируйте, чтобы использовать PIN2.";
+"my-eid-info-puk-blocked-message" = "PUK заблокирован, потому что PUK-код был введён неверно 3 раза. PUK невозможно разблокировать самому.";
 "my-eid-unblock-pin1-button-title" = "РАЗБЛОКИРОВАТЬ";
 "my-eid-unblock-pin2-button-title" = "РАЗБЛОКИРОВАТЬ";
-"my-eid-how-to-get-codes-message" = "Здесь Вы можете найти инструкции о том, как получить новый документ.";
+"my-eid-how-to-get-codes-message" = "Для получения нового PUK-кода для своей ID-карты, посетите центр обслуживания, где вы сможете получить конверт с кодами.";
 "my-eid-code-changed-success-message" = "%@ ИЗМЕНЕНО";
 "my-eid-code-unblocked-success-message" = "%@ РАЗБЛОКИРОВАН";
-"my-eid-wrong-code-message" = "Неверный %@ код. Вы можете попробовать ещё 2 раз.";
-"my-eid-wrong-code-message-singular" = "Неверный %@ код. Вы можете попробовать ещё 1 раз.";
-"my-eid-code-blocked-message" = "%1$@ заблокирован, потому что %1$@ код был введён неверно 3 раза. Разблокируйте, чтобы использовать %1$@.";
+"my-eid-wrong-code-message" = "Неверный %@-код. Вы можете попробовать ещё 2 раз.";
+"my-eid-wrong-code-message-singular" = "Неверный %@-код. Вы можете попробовать ещё 1 раз.";
+"my-eid-code-blocked-message" = "%1$@ заблокирован, потому что %1$@-код был введён неверно 3 раза. Разблокируйте, чтобы использовать %1$@.";
 // *** My eID info bullets ***
 "my-eid-info-bullet-same-codes-warning" = "Новый %1$@ должен отличаться от предыдущего %1$@.";
-"my-eid-info-bullet-auth-cert-info" = "PIN1 код используется для идентификации.";
-"my-eid-info-bullet-pin1-blocked-warning" = "Если PIN1 введен неверно 3 раза, сертификат индентификации будет заблокирован и станет невозможным использовать ID-карту для проверки идентификации до тех пор, пока PIN1 будет не разблокирован с помощью PUK кода.";
-"my-eid-info-bullet-forgot-code-note" = "Если Вы забыли %1$@ код, но Вы знаете Ваш PUK код, тогда Вы сможете поменять %1$@ с помощью PUK кода.";
-"my-eid-info-bullet-puk-envelope-info" = "PUK код написан в конверте, который прилагается к ID-карте.";
-"my-eid-info-bullet-sign-cert-info" = "PIN2 код используется для дигитальной подписи документа.";
-"my-eid-info-bullet-pin2-blocked-warning" = "Если PIN2 введен неверно 3 раза, сертификат подписи будет заблокирован и станет невозможным использовать ID-карту для дигитальной подписи до тех пор, пока PIN2 будет не разблокирован с помощью PUK кода.";
-"my-eid-info-bullet-puk-unblock-info" = "PUK код используется для разблокирования сертификатов, когда PIN1 или PIN2 были неверное введены 3 раза.";
-"my-eid-info-bullet-puk-blocked-warning" = "Если Вы забудете PUK код или сертификаты остануться заблокированными, необходимо посетить центр обслуживания для получения новых кодов.";
+"my-eid-info-bullet-auth-cert-info" = "PIN1-код используется для идентификации.";
+"my-eid-info-bullet-pin1-blocked-warning" = "Если PIN1 введен неверно 3 раза, сертификат индентификации будет заблокирован и станет невозможным использовать ID-карту для проверки идентификации до тех пор, пока PIN1 будет не разблокирован с помощью PUK-кода.";
+"my-eid-info-bullet-forgot-code-note" = "Если Вы забыли %1$@-код, но Вы знаете Ваш PUK-код, тогда Вы сможете поменять %1$@ с помощью PUK-кода.";
+"my-eid-info-bullet-puk-envelope-info" = "PUK-код написан в конверте, который прилагается к ID-карте.";
+"my-eid-info-bullet-sign-cert-info" = "PIN2-код используется для дигитальной подписи документа.";
+"my-eid-info-bullet-pin2-blocked-warning" = "Если PIN2 введён 3 раза неверно, тогда блокируется сертификат цифровой подписи и использовать ID-карту для цифровой подписи невозможно, пока блокировка не снята PUK-кодом.";
+"my-eid-info-bullet-puk-unblock-info" = "PUK-код используется для разблокирования сертификатов, когда PIN1 или PIN2 были неверно введены 3 раза.";
+"my-eid-info-bullet-puk-blocked-warning" = "Если Вы забудете PUK-код или сертификаты остануться заблокированными, необходимо посетить центр обслуживания для получения новых кодов.";
 "my-eid-change-code-title" = "Изменить %@";
 "my-eid-unblock-code-title" = "Разблокировать %@";
-"my-eid-current-code-label" = "ДЕЙСТВУЮЩИЙ %@ КОД";
-"my-eid-new-code-label" = "НОВЫЙ %@ КОД (не меньше %i символов)";
-"my-eid-new-code-again-label" = "ПОВТОРИТЬ НОВЫЙ %@ КОД";
+"my-eid-current-code-label" = "ДЕЙСТВУЮЩИЙ %@-КОД";
+"my-eid-new-code-label" = "НОВЫЙ %@-КОД (не меньше %i символов)";
+"my-eid-new-code-again-label" = "ПОВТОРИТЬ НОВЫЙ %@-КОД";
 "my-eid-discard-button-title" = "ОТМЕНИТЬ";
 "my-eid-confirm-change-button-title" = "ИЗМЕНИТЬ";
 "my-eid-confirm-unblock-button-title" = "РАЗБЛОКИРОВАТЬ";
-"my-eid-error-new-code-too-short" = "Новый %@ код должен быть не менее %i символов";
-"my-eid-error-current-code-too-short" = "Действующий %@ код должен быть не менее %i символов";
-"my-eid-error-codes-mismatch" = "Новые %@ коды должны совпадать";
+"my-eid-error-new-code-too-short" = "Новый %@-код должен быть не менее %i символов";
+"my-eid-error-current-code-too-short" = "Действующий %@-код должен быть не менее %i символов";
+"my-eid-error-codes-mismatch" = "Новые %@-коды должны совпадать";
 "my-eid-error-codes-are-same" = "Старый и новый %@ должны быть разными";
-"my-eid-error-code-contained-in-personal-code" = "Новый %@ код не может быть частью Вашего личного кода";
-"my-eid-error-code-is-date-of-birth" = "Новый %@ код не может быть датой Вашего рождения";
-"my-eid-error-code-too-easy" = "Новый %@ код не может быть таким простым";
+"my-eid-error-code-contained-in-personal-code" = "Новый %@-код не может быть частью Вашего личного кода";
+"my-eid-error-code-is-date-of-birth" = "Новый %@-код не может быть датой Вашего рождения";
+"my-eid-error-code-too-easy" = "Новый %@-код не может быть таким простым";
 "settings-title" = "Настройки";
 "settings-phone-number-title" = "Код страны и телефонный номер";
 "settings-phone-number-placeholder" = "372XXXXXXXX";
 "settings-id-code-title" = "Личный код";
 "settings-id-code-placeholder" = "Личный код";
-"settings-rpuuid-title" = "Доступ к услуге Mobiil-ID и Smart-ID";
+"settings-rpuuid-title" = "Доступ к услуге mobiil-ID и Smart-ID";
 "settings-rpuuid-placeholder" = "00000000-0000-0000-0000-000000000000";
-"settings-timestamp-url-title" = "URL-адрес временного штампа";
+"settings-timestamp-url-title" = "Доступ к услугам отметки времени";
 "settings-timestamp-url-placeholder" = "";
 "settings-timestamp-use-default-title" = "Использовать значение по умолчанию";
 "diagnostics-title" = "Диагностика";
