--- a/SkSigningLib/SkSigningLib/Supporting Files/et.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/et.lproj/Localizable.strings
@@ -17,7 +17,10 @@
 *
 */
 
-// ** Mobile ID errors ***
+// General errors
+"general-signature-adding-error" = "Ümbriku allkirjastamine ebaõnnestus";
+
+// ** Mobile / Smart ID errors ***
 "mid-rest-error-unknown" = "Tundmatu viga mobiil-ID\'ga allkirjastamisel";
 "mid-rest-error-general" = "Midagi läks valesti. Palun proovi uuesti";
 "mid-rest-error-incorrect-parameters" = "Telefoninumber peab sisaldama riigikoodi";
