--- a/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
@@ -17,7 +17,10 @@
 *
 */
 
-// ** Mobile ID errors ***
+// General errors
+"general-signature-adding-error" = "Не удалось подписать контейнер";
+
+// ** Mobile / Smart ID errors ***
 "mid-rest-error-unknown" = "Неизвестная ошибка при подписании с помощю mobiil-ID";
 "mid-rest-error-general" = "Что-то полшло не так. Пожалуйста, попробуйте еще раз";
 "mid-rest-error-incorrect-parameters" = "Номер телефона должен содержать код страны";
