--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -221,6 +221,7 @@
 "my-eid-info-my-eid-accessibility" = "MY e-ID";
 "my-eid-info-my-eid-id-card" = "ID-CARD";
 "my-eid-info-my-eid-mobile-id" = "MOBILE-ID";
+"my-eid-info-my-eid-smart-id" = "SMART-ID";
 "my-eid-info-my-eid-digi-id" = "DIGI-ID";
 "my-eid-info-my-eid-unknown" = "UNKNOWN";
 "my-eid-info-my-eid-e-resident" = "E-RESIDENT";
