--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -222,6 +222,7 @@
 "my-eid-info-my-eid-accessibility" = "МОЙ e-ID";
 "my-eid-info-my-eid-id-card" = "ID-КАРТА";
 "my-eid-info-my-eid-mobile-id" = "MOBIIL-ID";
+"my-eid-info-my-eid-smart-id" = "SMART-ID";
 "my-eid-info-my-eid-digi-id" = "DIGI-ID";
 "my-eid-info-my-eid-unknown" = "НЕИЗВЕСТНО";
 "my-eid-info-my-eid-e-resident" = "E-РЕЗИДЕНТ";
