--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -222,6 +222,7 @@
 "my-eid-info-my-eid-accessibility" = "MINU e-ID";
 "my-eid-info-my-eid-id-card" = "ID-KAART";
 "my-eid-info-my-eid-mobile-id" = "MOBIIL-ID";
+"my-eid-info-my-eid-smart-id" = "SMART-ID";
 "my-eid-info-my-eid-digi-id" = "DIGI-ID";
 "my-eid-info-my-eid-unknown" = "TEADMATA";
 "my-eid-info-my-eid-e-resident" = "E-RESIDENT";
