--- a/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
@@ -43,7 +43,6 @@
 "sid-rest-error-not-qualified" = "Для проставления подписи в мобильном приложении RIA DigiDoc, ваш Smart-ID должен соответствовать уровню \"высокий\".";
 "sid-rest-error-old-api" = "Мобильное приложение RIA DigiDoc нуждается в обновлении. Пожалуйста, установите новую версию из магазина мобильных приложений. Дополнительную информацию можно получить по телефону (+372) 666 8888.";
 "sid-rest-error-under-maintenance" = "Технический сбой услуги Smart-ID. Пожалуйста, попробуйте позже.";
-"sid-rest-error-timeout" = "Срок действия вашей транзакции Smart-ID истек. Пожалуйста, попробуйте еще раз.";
 "sid-rest-error-forbidden" = "Не удалось подписать контейнер. Проверьте настройки доступа услуги Smart-ID. https://www.id.ee/ru/artikkel/dlya-uchrezhdenij-v-kotoryh-v-bolshom-obeme-podpisyvayutsya-dokumenty-s-pomoshhyu-digidoc4-klienta/";
-"sid-rest-error-account-not-found" = "Счет не найден";
+"sid-rest-error-account-not-found-or-timeout" = "Не удалось подписать контейнер. Срок действия вашей операции Smart-ID истек или учетная запись не найдена.";
 "sid-rest-error-certificate-revoked" = "Сертификат недействителен";
